--- a/index.html
+++ b/index.html
@@ -130,10 +130,10 @@
             </div>
             <a class="more-info-link" href="http://russian.visitkorea.or.kr/rus/ATT/3_4_view.jsp?cid=2537931"></a>
             <div class="social-links"> 
-                <a class="share-facebook" href="http://www.facebook.com/sharer/sharer.php?s=100&p%5Btitle%5D=TITLE&p%5Bsummary%5D=DESC&p%5Burl%5D=URL&p%5Bimages%5D%5B0%5D=IMG_PATH" target="_blank">
+                <a class="share-facebook" id="fb-share5" href="http://www.facebook.com/sharer/sharer.php?s=100&p%5Btitle%5D=TITLE&p%5Bsummary%5D=DESC&p%5Burl%5D=URL&p%5Bimages%5D%5B0%5D=IMG_PATH" target="_blank">
                     <div class="fb"></div>
                 </a>
-                <a class="share-vk" href="http://vk.com/share.php?url=URL&title=TITLE&description=DESC&image=IMG_PATH&noparse=true" target="_blank">
+                <a class="share-vk" id="vk-share5" href="http://vk.com/share.php?url=URL&title=TITLE&description=DESC&image=IMG_PATH&noparse=true" target="_blank">
                     <div class="vk"></div>
                 </a>
             </div>
@@ -145,10 +145,10 @@
             </div>
             <a class="more-info-link" href="http://russian.visitkorea.or.kr/rus/TRI/2_6_view.jsp?cid=2678193"></a>
             <div class="social-links"> 
-                <a class="share-facebook" href="http://www.facebook.com/sharer/sharer.php?s=100&p%5Btitle%5D=TITLE&p%5Bsummary%5D=DESC&p%5Burl%5D=URL&p%5Bimages%5D%5B0%5D=IMG_PATH" target="_blank">
+                <a class="share-facebook" id="fb-share6" href="http://www.facebook.com/sharer/sharer.php?s=100&p%5Btitle%5D=TITLE&p%5Bsummary%5D=DESC&p%5Burl%5D=URL&p%5Bimages%5D%5B0%5D=IMG_PATH" target="_blank">
                     <div class="fb"></div>
                 </a>
-                <a class="share-vk" href="http://vk.com/share.php?url=URL&title=TITLE&description=DESC&image=IMG_PATH&noparse=true" target="_blank">
+                <a class="share-vk" id="vk-share6" href="http://vk.com/share.php?url=URL&title=TITLE&description=DESC&image=IMG_PATH&noparse=true" target="_blank">
                     <div class="vk"></div>
                 </a>
             </div>
