--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="index.css">
-    <script type="text/javascript" src="https://vk.com/js/api/share.js?95" charset="windows-1251"></script>
+    <link rel="stylesheet" href="./index.css">
     <title>Тест</title>
 </head>
 <body class="root">
@@ -63,7 +62,7 @@
 
         <div class="result result1 hidden">
             <div class="result__video-wrap">
-                <video class="result__video result__video_position" src="/video/healing1.mp4" controls="controls"></video>
+                <video class="result__video result__video_position" src="./video/healing1.mp4" controls="controls"></video>
             </div>
             <a class="more-info-link more-info-link_position" href="http://russian.visitkorea.or.kr/rus/ATT/3_3_view.jsp?cid=2537895"></a>
             <div class="social-links"> 
@@ -80,7 +79,7 @@
 
         <div class="result result2 hidden">
             <div class="result__video-wrap">
-                <video class="result__video result__video_position" src="/video/taste2.mp4" controls="controls"></video>
+                <video class="result__video result__video_position" src="./video/taste2.mp4" controls="controls"></video>
             </div>
             <a class="more-info-link more-info-link_position" href="http://russian.visitkorea.or.kr/rus/ATT/3_1_view.jsp?cid=274550"></a>
             <div class="social-links"> 
@@ -96,7 +95,7 @@
 
         <div class="result result3 hidden">
             <div class="result__video-wrap">
-                <video class="result__video" src="/video/beaty3.mp4" controls="controls"></video>
+                <video class="result__video" src="./video/beaty3.mp4" controls="controls"></video>
             </div>
             <a class="more-info-link" href="http://russian.visitkorea.or.kr/rus/ATT/3_1_view.jsp?cid=2695729"></a>
             <div class="social-links"> 
@@ -111,7 +110,7 @@
 
         <div class="result result4 hidden">
             <div class="result__video-wrap">
-                <video class="result__video" src="/video/vibes4.mp4" controls="controls"></video>
+                <video class="result__video" src="./video/vibes4.mp4" controls="controls"></video>
             </div>
             <a class="more-info-link" href="http://russian.visitkorea.or.kr/rus/ATT/3_5_list.jsp"></a>
             <div class="social-links"> 
@@ -126,7 +125,7 @@
 
         <div class="result result5 hidden">
             <div class="result__video-wrap">
-                <video class="result__video" src="/video/light5.mp4" controls="controls"></video>
+                <video class="result__video" src="./video/light5.mp4" controls="controls"></video>
             </div>
             <a class="more-info-link" href="http://russian.visitkorea.or.kr/rus/ATT/3_4_view.jsp?cid=2537931"></a>
             <div class="social-links"> 
@@ -141,7 +140,7 @@
 
         <div class="result result6 hidden">
             <div class="result__video-wrap">
-                <video class="result__video" src="/video/advantures6.mp4" controls="controls"></video>
+                <video class="result__video" src="./video/advantures6.mp4" controls="controls"></video>
             </div>
             <a class="more-info-link" href="http://russian.visitkorea.or.kr/rus/TRI/2_6_view.jsp?cid=2678193"></a>
             <div class="social-links"> 
@@ -161,7 +160,7 @@
                 <p class="promocode__text">JFEWHUVFR</p>
             </div>
             <div class="present">
-                <img class="present__img" src="/images/present.png">
+                <img class="present__img" src="./images/present.png">
                 <p class="present__text">Активируйте промокод <a class="present__link" href="https://megogo.ru/ru/code">по ссылке</a></p>
             </div>
         </div>
@@ -173,6 +172,6 @@
 
     </section>
     
-    <script src="index.js"></script>
+    <script src="./index.js"></script>
 </body>
 </html>
