--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
 
         <div class="result result1 hidden">
             <div class="result__video-wrap">
+                <!-- <div class="play"></div> -->
                 <video class="result__video result__video_position" src="./video/healing1.mp4" controls="controls"></video>
             </div>
             <a class="more-info-link more-info-link_position" href="http://russian.visitkorea.or.kr/rus/ATT/3_3_view.jsp?cid=2537895"></a>
